--- a/src/index.html
+++ b/src/index.html
@@ -790,10 +790,11 @@
                   Start eating well today. You can cancel or pause anytime. And
                   the first meal is on us!
                 </p>
-                <form class="cta-form" action="#">
+                <form class="cta-form" name="sign-up" netlify>
                   <div class="wrapper">
                     <label for="full-name">Full Name</label>
                     <input
+                      name="full-name"
                       id="full-name"
                       type="text"
                       placeholder="John Smith"
@@ -807,7 +808,8 @@
                       id="email"
                       type="email"
                       placeholder="me@example.com"
-                      required=""
+                      required
+                      name="email"
                     />
                   </div>
 
@@ -815,7 +817,7 @@
                     <label for="select-where"
                       >Where did you hear from us?</label
                     >
-                    <select id="select-where" required="">
+                    <select name="select-where" id="select-where" required="">
                       <option value="">Please choose one option:</option>
                       <option value="friends">Friends and family</option>
                       <option value="youtube">YouTube video</option>
